Fixed some spacing issues

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -53,7 +53,6 @@
 }
 
 .search-bar-your-recipe {
-  margin-right: 16px;
   position: relative;
   display: flex;
   height: 36px;
